kubernetes/platform/networking/gateway/httproute-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: networking
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "hubble.jupitertech.net"
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
